--- a/test/fixtures/form_fields_with_additonal_attributes.html
+++ b/test/fixtures/form_fields_with_additonal_attributes.html
@@ -1,6 +1,6 @@
-<form action="#" method="post">
+<form method="post" action="#">
 <label for="name">Name</label>
-<input name="name" class="user-input" type="text" value="rob">
+<input name="name" type="text" class="user-input" value="rob">
 <label for="job">Job</label>
 <input name="job" type="text" value="hexlet">
 </form>
