--- a/test/fixtures/form_with_value_submit.html
+++ b/test/fixtures/form_with_value_submit.html
@@ -1,4 +1,4 @@
-<form action="#" method="post">
+<form method="post" action="#">
 <label for="name">Name</label>
 <input name="name" type="text" value="">
 <label for="job">Job</label>
