--- a/test/fixtures/form_with_override_def_field_attributes.html
+++ b/test/fixtures/form_with_override_def_field_attributes.html
@@ -1,4 +1,4 @@
 <form method="post" action="#">
-<label for="job">Job</label>
-<textarea name="job" cols="50"  rows="50">hexlet</textarea>
-</form
+    <label for="job">Job</label>
+    <textarea name="job" cols="50" rows="50">hexlet</textarea>
+</form>
